0028325: Unnecessary copying of surface

Giving up creation of new adaptor of the surface without real need. Using the available adaptor instead.